--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "comfydeploy": "0.0.13",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.309.0",
     "next": "14.0.3",
     "next-plausible": "^3.12.0",
@@ -35,22 +36,24 @@
     "react-hook-form": "^7.49.3",
     "react-icons": "^5.0.1",
     "react-use-websocket": "^4.7.0",
+    "shadcn-ui": "^0.8.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "tldraw": "^2.1.0-canary.4cc823e22eab",
     "use-debounce": "^10.0.0",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "typescript": "^5"
   }
 }
